# fpgaCommand

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.398babc  CommandContent.cpp  CommandRegister.h  DeviceControl.cpp  DeviceControl.h  FpgaCommand.cpp  FpgaCommand.h  Types.h  commandcontent.cpp  commandcontent.h  common.cpp  common.h  main.cpp  ncpp.h  testCvMat.h  testEigen.h  vcpkg.json  控制流程.txt
ubuntu/: install.sh  polyseq-usb-permissions.rules  update_grub.sh
